# rust-workspace

./: README.md
crates/cli-tool/: Cargo.toml
crates/cli-tool/src/: main.rs
crates/cli-tool/src/cli/: args.rs  instance.rs  mod.rs
crates/cli-tool/src/cli/interval/: print.rs
crates/cli-tool/src/cli/request/: get.rs  mod.rs  post.rs  router.rs
crates/tui-tool/: Cargo.toml
crates/tui-tool/src/: main.rs  tui_instance.rs
crates/tui-tool/src/layer/: layers.rs  mod.rs  tabs.rs  text.rs
crates/web-server/: Cargo.toml
