[package]
name = "cli-tool"
version = "0.1.0"
edition = "2021"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = { version = "0.3" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
